websecurity impl without extending deprecated class,few new features

--- a/ticket/src/main/resources/application.properties
+++ b/ticket/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/tickets
 spring.datasource.username=tickets
 spring.datasource.password=Tickets!
+
+spring.secondDatasource.url=jdbc:mysql://localhost:3306/tickets/users
+spring.secondDatasource.username=tickets
+spring.secondDatasource.password=Tickets!
 # Specify the DBMS
 spring.jpa.database = MYSQL
 # Show or not log for each sql query
@@ -10,3 +14,5 @@ spring.jpa.hibernate.ddl-auto = update
 # Use spring.jpa.properties.* for Hibernate native properties (the prefix is
 # stripped before adding them to the entity manager)
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+
+
